update readme.md, add some fixes ConsoleInterface and other

--- a/homework_1/Makefile
+++ b/homework_1/Makefile
@@ -1,17 +1,15 @@
+
 .DEFAULT_GOAL := build
+
+run:
+	gradle run
 
 build:
 	gradle build
 
-start:
-	gradle run
+test:
+	gradle test
 
-report:
-	make -C app report
-
-lint:
-	make -C app lint
-
-build-run: build run
+build-run: build
 
 .PHONY: build
