--- a/homework_2/build.gradle
+++ b/homework_2/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+    testImplementation 'org.testcontainers:testcontainers:1.15.3'
+    testImplementation 'org.testcontainers:junit-jupiter:1.15.3'
+    testImplementation 'org.testcontainers:postgresql:1.15.3'
+    testImplementation 'org.postgresql:postgresql:42.2.18'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+
     implementation 'org.postgresql:postgresql:42.7.2'
 
     implementation 'org.liquibase:liquibase-commercial:4.29.1'
