--- a/homework_2/build.gradle
+++ b/homework_2/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'war'
     id 'java'
     id 'application'
 }
@@ -9,6 +10,7 @@ version '1.0-SNAPSHOT'
 application {
     mainClassName = 'com.ylab.Main'
 }
+
 repositories {
     mavenCentral()
 }
@@ -23,6 +25,17 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+    implementation 'org.apache.tomcat:tomcat-catalina:11.0.0-M24'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.0-M24'
+    implementation 'org.apache.tomcat:tomcat-servlet-api:11.0.0-M24'
+    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+    implementation 'org.mapstruct:mapstruct:1.6.0'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.56'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.56'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-logging-juli:9.0.0.M6'
+
     testImplementation 'org.testcontainers:testcontainers:1.15.3'
     testImplementation 'org.testcontainers:junit-jupiter:1.15.3'
     testImplementation 'org.testcontainers:postgresql:1.15.3'
@@ -35,6 +48,14 @@ dependencies {
     implementation 'org.liquibase:liquibase-core:4.29.1'
 }
 
+war {
+    archiveFileName = 'carshop.war'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
 jar {
     manifest {
@@ -46,6 +67,10 @@ jar {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 run {
