--- a/homework_3/build.gradle
+++ b/homework_3/build.gradle
@@ -28,8 +28,11 @@ dependencies {
     implementation 'org.apache.tomcat:tomcat-catalina:11.0.0-M24'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.0-M24'
     implementation 'org.apache.tomcat:tomcat-servlet-api:11.0.0-M24'
+
     implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     implementation 'org.mapstruct:mapstruct:1.6.0'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.56'
@@ -46,6 +49,15 @@ dependencies {
 
     implementation 'org.liquibase:liquibase-commercial:4.29.1'
     implementation 'org.liquibase:liquibase-core:4.29.1'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+
+    runtimeOnly 'org.aspectj:aspectjweaver:1.9.22.1'
+    runtimeOnly 'org.aspectj:aspectjrt:1.9.22.1'
+    implementation 'org.aspectj:aspectjtools:1.9.22.1'
+
+
+
 }
 
 war {
