--- a/homework_3/src/main/webapp/WEB-INF/web.xml
+++ b/homework_3/src/main/webapp/WEB-INF/web.xml
@@ -3,25 +3,25 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <servlet>
-        <servlet-name>registration</servlet-name>
-        <servlet-class>com.ylab.servlet.RegistrationServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>registration</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>authorization</servlet-name>
-        <servlet-class>com.ylab.servlet.AuthorizationServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>authorization</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
+<!--    <servlet>-->
+<!--        <servlet-name>registration</servlet-name>-->
+<!--        <servlet-class>com.ylab.servlet.RegistrationServlet</servlet-class>-->
+<!--    </servlet>-->
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>registration</servlet-name>-->
+<!--        <url-pattern>/register</url-pattern>-->
+<!--    </servlet-mapping>-->
+<!--    <servlet>-->
+<!--        <servlet-name>authorization</servlet-name>-->
+<!--        <servlet-class>com.ylab.servlet.AuthorizationServlet</servlet-class>-->
+<!--    </servlet>-->
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>authorization</servlet-name>-->
+<!--        <url-pattern>/login</url-pattern>-->
+<!--    </servlet-mapping>-->
 <!--    <servlet>-->
 <!--        <servlet-name>show_call_cars</servlet-name>-->
-<!--        <servlet-class>com.ylab.servlet.cars.ShowAllCarsServlet</servlet-class>-->
+<!--        <servlet-class>com.ylab.servlet.cars.client.ShowAllCarsServlet</servlet-class>-->
 <!--    </servlet>-->
 <!--    <servlet-mapping>-->
 <!--        <servlet-name>show_call_cars</servlet-name>-->
