--- a/homework_3/build.gradle
+++ b/homework_3/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'war'
     id 'java'
     id 'application'
+    id 'io.freefair.aspectj.post-compile-weaving' version '6.3.0'
 }
 
 group 'com.ylab'
@@ -56,8 +57,8 @@ dependencies {
     runtimeOnly 'org.aspectj:aspectjrt:1.9.22.1'
     implementation 'org.aspectj:aspectjtools:1.9.22.1'
 
-
-
+    aspect 'org.aspectj:aspectjrt:1.9.7'
+    aspect 'org.aspectj:aspectjweaver:1.9.7'
 }
 
 war {
