--- a/homework_3/build.gradle
+++ b/homework_3/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'java'
     id 'application'
     id 'io.freefair.aspectj.post-compile-weaving' version '6.3.0'
+    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.2.3'
 }
 
 group 'com.ylab'
@@ -26,17 +28,9 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
-    implementation 'org.apache.tomcat:tomcat-catalina:11.0.0-M24'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.0-M24'
-    implementation 'org.apache.tomcat:tomcat-servlet-api:11.0.0-M24'
-
     implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     implementation 'org.mapstruct:mapstruct:1.6.0'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
-
-    implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.56'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.56'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-logging-juli:9.0.0.M6'
 
     testImplementation 'org.testcontainers:testcontainers:1.15.3'
     testImplementation 'org.testcontainers:junit-jupiter:1.15.3'
@@ -52,16 +46,34 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
+    implementation("jakarta.annotation:jakarta.annotation-api:3.0.0")
+    compileOnly("jakarta.servlet:jakarta.servlet-api:6.1.0")
+    implementation("jakarta.persistence:jakarta.persistence-api:3.2.0")
+    implementation("jakarta.validation:jakarta.validation-api:3.1.0")
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.3.3")
+
     runtimeOnly 'org.aspectj:aspectjweaver:1.9.22.1'
     runtimeOnly 'org.aspectj:aspectjrt:1.9.22.1'
     implementation 'org.aspectj:aspectjtools:1.9.22.1'
 
     aspect 'org.aspectj:aspectjrt:1.9.7'
     aspect 'org.aspectj:aspectjweaver:1.9.7'
-}
 
-war {
-    archiveFileName = 'carshop.war'
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    implementation("org.springframework.security:spring-security-core:6.3.3")
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
+    implementation("org.springframework.security:spring-security-config:6.3.3")
+
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.3'
+    implementation 'org.springframework:spring-aop:6.1.12'
+    implementation 'org.springframework:spring-aop:6.1.12'
+    implementation 'org.springframework:spring-context:6.1.12'
+    implementation 'org.springframework:spring-web:6.1.12'
+    implementation 'org.springframework:spring-core:6.1.12'
+
+
 }
 
 java {
@@ -74,6 +86,12 @@ jar {
         attributes(
                 'Main-Class': 'com.ylab.Main'
         )
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
     }
 }
 
