--- a/homework_4/build.gradle
+++ b/homework_4/build.gradle
@@ -46,12 +46,10 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
-    implementation("jakarta.annotation:jakarta.annotation-api:3.0.0")
-    compileOnly("jakarta.servlet:jakarta.servlet-api:6.1.0")
-    implementation("jakarta.persistence:jakarta.persistence-api:3.2.0")
     implementation("jakarta.validation:jakarta.validation-api:3.1.0")
+    // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
+//    compileOnly("jakarta.servlet:jakarta.servlet-api:6.1.0")
 
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.3.3")
 
     runtimeOnly 'org.aspectj:aspectjweaver:1.9.22.1'
@@ -61,18 +59,17 @@ dependencies {
     aspect 'org.aspectj:aspectjrt:1.9.7'
     aspect 'org.aspectj:aspectjweaver:1.9.7'
 
-    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-    implementation("org.springframework.security:spring-security-core:6.3.3")
-    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
-    implementation("org.springframework.security:spring-security-config:6.3.3")
 
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.3'
-    implementation 'org.springframework:spring-aop:6.1.12'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
     implementation 'org.springframework:spring-aop:6.1.12'
     implementation 'org.springframework:spring-context:6.1.12'
     implementation 'org.springframework:spring-web:6.1.12'
     implementation 'org.springframework:spring-core:6.1.12'
 
+    implementation("org.hibernate.orm:hibernate-core:6.6.0.Final")
 
 }
 
