--- a/homework_4/build.gradle
+++ b/homework_4/build.gradle
@@ -47,8 +47,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
     implementation("jakarta.validation:jakarta.validation-api:3.1.0")
-    // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
-//    compileOnly("jakarta.servlet:jakarta.servlet-api:6.1.0")
 
     implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.3.3")
 
@@ -64,12 +62,17 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    implementation 'org.springframework:spring-aop:6.1.12'
+    implementation("org.springframework.boot:spring-boot-starter-aop:3.3.3")
     implementation 'org.springframework:spring-context:6.1.12'
     implementation 'org.springframework:spring-web:6.1.12'
     implementation 'org.springframework:spring-core:6.1.12'
 
     implementation("org.hibernate.orm:hibernate-core:6.6.0.Final")
+
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
+    testImplementation("org.springframework:spring-mock:2.0.8")
+    testImplementation("org.springframework.boot:spring-boot-starter-test:3.3.3")
+    testImplementation("org.springframework.security:spring-security-test:6.3.3")
 
 }
 
