--- a/homework_4/build.gradle
+++ b/homework_4/build.gradle
@@ -32,12 +32,7 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.6.0'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
-    testImplementation 'org.testcontainers:testcontainers:1.15.3'
-    testImplementation 'org.testcontainers:junit-jupiter:1.15.3'
-    testImplementation 'org.testcontainers:postgresql:1.15.3'
-    testImplementation 'org.postgresql:postgresql:42.2.18'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
 
     implementation 'org.postgresql:postgresql:42.7.2'
 
@@ -45,6 +40,7 @@ dependencies {
     implementation 'org.liquibase:liquibase-core:4.29.1'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2")
 
     implementation("jakarta.validation:jakarta.validation-api:3.1.0")
 
@@ -56,7 +52,6 @@ dependencies {
 
     aspect 'org.aspectj:aspectjrt:1.9.7'
     aspect 'org.aspectj:aspectjweaver:1.9.7'
-
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
